# word_segmenter

./: CMakeLists.txt  README.md
images/: 006_ND_1947-01-08_006.tif
include/: segmenter.hpp
src/: segmenter.cpp  word_segmenter.cpp
